refactor: 兼容jdk1.8